# mpm_3d

./: .gitignore  CMakeLists.txt  README.txt
doc/latex_src/: document.aux  document.bbl  document.blg  document.dvi  document.out  document.tex  document.toc  framework.tex  installation.aux  installation.tex  installation.tex.aux  references.bib  running.tex  user_def.tex
examples/: README.txt  test.cfg  test.grid  test.particles  test3D.cfg
examples/apicblockdrop2D/: test2D.cfg
examples/apiccollision2D/: test2D.cfg
examples/avoidavoid/: block.points  block_fine.points  test2D.cfg  test2D_fine.cfg  test2D_standard.cfg
examples/axisym2D/: block.points  fluid.points  sand.points  test2D.cfg
examples/blockdrop2D/: test2D.cfg
examples/blockdrop2D_cylinder/: test2D.cfg  test2D.points
examples/blockdrop2D_cylinder_cubic/: test2D.cfg
examples/blockdrop3D/: test3D.cfg
examples/cavity2D/: test2D.cfg  test2D.points
examples/collision2D/: test2D.cfg
examples/collision3D/: test3D.cfg
examples/columncollapse2D/: test2D.cfg  test2D.points
examples/columncollapse3D/: test3D.cfg
examples/cubiccollision3D/: test3D.cfg
examples/cubiccolumncollapse2D/: test2D.cfg
examples/cubicdrop2D/: test2D.cfg
examples/cubicperiodic2D/: test2D.cfg
examples/cubicwoodonwater2D/: fluid.points  test2D.cfg  wood.points
examples/cylindricalcouette2D/: fluid.points  test2D.cfg
examples/cylindricalcouette2D_sand/: test2D.cfg
examples/drop2D/: block.points  sand.points  test2D.cfg
examples/freewall3D/: test3D.cfg
examples/frictionBC2D/: test2D.cfg
examples/fvm/: fvm.config  fvm_rk4.config  test2D.cfg
examples/fvm_mpm_mixture/: fvm.config  test2D.cfg  test2D.points
examples/fvm_tetrahedra/: slice.geo
examples/fvm_triangles/: .untitled.geo.swp  block2.points  test.geo  test2D.cfg  test2D_rk4.cfg  test_v4.geo  test_v4.msh
include/: body.hpp  boundary.hpp  config.hpp  contact.hpp  driver.hpp  element.hpp  factorial.hpp  fvm_objects.hpp  grid.hpp  job.hpp  loading.hpp  material.hpp  mpm_objects.hpp  mpm_sparse.hpp  mpm_tensor.hpp  mpm_tensorarray.hpp  mpm_vector.hpp  mpm_vectorarray.hpp  mpmconfig.hpp  mpmio.hpp  mpmtensor.hpp  mpmtensorarray.hpp  mpmvector.hpp  mpmvectorarray.hpp  node.hpp  nodes.hpp  parser.hpp  particle.hpp  points.hpp  process.hpp  registry.hpp  runtimedef.hpp  serializer.hpp  signal_handler.hpp  signal_resolution.hpp  solver.hpp  spmd.hpp  stringparse.hpp  stringparser.hpp  tensor.hpp  (+2 more)
kk/: spmd.cpp  spmd.hpp
mpm_gmsh/: CMakeLists.txt  how_to_make_a_box.geo  main.cpp  simple2D.geo  simple2D.msh  slope2D.geo  small_tank.geo  small_tank_fine.geo
mpm_gmsh/gmsh_pygen/: box.gmsh  box.py  box_gen.py  box_gen_3on8in.py  box_gen_3on8in_2wide.py  box_gen_3on8in_fine.py  box_gen_aaron.py  circ.gmsh  gmsh.py  line.py  out.gmsh  point.py  subdomain_3on8in.geo  subdomain_aaron.geo  surface.py  test.py  test_aaron.geo  test_box.py  tet.gmsh  tetrahedron.py  untitled.geo  volume.py
mpm_png_to_points/: .~lock.test#  fluid.points  png_to_mixture.py  png_to_points.py  png_to_sand.py  sand.points  test  test2D.points
mpm_pygen/: CSGTree3d.py  GenerateBedLoad2D_v2.py  GenerateBlock.py  GenerateBlock.py~  GenerateBlock2D_v2.py  GenerateBlockAxiSym2D_v2.py  GenerateBlock_v2.py  GenerateCDBlock2D_v2.py  GenerateCircle2D_v2.py  GenerateColumn.py  GenerateCylindricalCouette2D.py  GenerateFishInWater2D_v2.py  GenerateImpactMixture2D_v2.py  GenerateLoadedSlope.py  GenerateMixture2D_v2.py  GenerateMixture3D_v2.py  GenerateMixture_OOP.py  GenerateNACA2D_v2.py  GeneratePeanut.py  GeneratePipe.py  GenerateProjectile.py  GenerateRing2D_v2.py  GenerateRotatedBlock2D_v2.py  GenerateRotatingBlock2D_v2.py  GenerateSlope.py  GenerateSlope2D_v2.py  GenerateSphere_v2.py  GenerateSyringe.py  GenerateWheel.py  GenerateWheel2D_v2.py  Grid3d.py  Grid3d.py~  Primitives3d.py  Primitives3d.py~  s.grid  s.particles  test.py
old/: body.cpp.10.29.16  body.hpp.10.29.16  element.hpp.10.31.16  process.cpp.10.29.16
src/boundaries/: CMakeLists.txt  boxBC.cpp  boxBC2d.cpp  cartesian_box.cpp  cartesian_box2D_w_friction.cpp  cartesian_box2D_w_friction_poiseuille.cpp  cartesian_box_w_friction.cpp  cartesian_box_w_friction_reduced.cpp  cartesian_customBC.cpp  cartesian_floor_freewall.cpp  cartesian_periodic_bedload.cpp  cartesian_periodic_driven.cpp  cartesian_periodic_drivenstep.cpp  cartesian_periodic_floor.cpp  cartesian_smoothbox.cpp  doublewallBC2d.cpp  drivenboxBC2d.cpp  floorBC.cpp  floorBC2D.cpp  floorBC2d.cpp  periodicBC.cpp  periodicBC2d.cpp  pipeBC2d.cpp  rigid_linear_motion.cpp  syringeBC2d.cpp
src/config/: config.cpp  (+1 more)
src/contacts/: CMakeLists.txt  contact_bonded.cpp  contact_huang.cpp  contact_rigid.cpp  huang.cpp  huang2d.cpp  mixture_slurry.cpp  mixture_slurry_explicit.cpp  nocontact.cpp  slurry.cpp
src/drivers/: CMakeLists.txt  ballistic_impactor.cpp  column_collapse_driver.cpp  default_driver.cpp  launched_projectile_driver.cpp  shear_driver.cpp  shear_driver_2D.cpp  shear_traction_driver.cpp  shear_traction_driver_2D.cpp  shear_traction_driver_subsample.cpp  user_def_grav_driver.cpp
src/grids/: CMakeLists.txt  cartesian.cpp  cartesian_cubic.cpp  cartesian_cubic_custom.cpp  cartesian_custom.cpp  cartesian_periodic.cpp  gmsh_tri2D.cpp
src/materials/: CMakeLists.txt  dp_plasticity.cpp  g_local_mu2.cpp  g_local_mu2_full.cpp  g_local_mu2_plane_strain.cpp  gravitational_body.cpp  hyperelastic.cpp  isolin.cpp  isolin_2D.cpp  isolin_wheel.cpp  isolin_wheel_cst_omega.cpp  slurry_mu_im_2D.cpp  slurry_mu_im_int.cpp  slurry_mu_im_rand_2D.cpp  slurry_mu_iv.cpp  slurry_mu_iv_int.cpp  slurry_viscofluid.cpp  slurry_viscofluid_2D.cpp  slurry_viscofluid_avg.cpp  slurry_viscofluid_rand.cpp  viscoelastic_polymer_liquid.cpp  viscofluid.cpp  viscofluid_rand.cpp  viscofluid_rand_psmooth.cpp
src/solvers/: CMakeLists.txt  explicit_usl.cpp  explicit_usl_2D.cpp  explicit_usl_apic.cpp  explicit_usl_axisym2D.cpp  explicit_usl_cubic.cpp  explicit_usl_delta_correctedmass.cpp  explicit_usl_es.cpp  explicit_usl_parallel.cpp  newton_bicgstab.cpp  newton_bicgstabl.cpp  newton_cg.cpp  newton_direct.cpp
(+992 files in other folders)
